updated details page and minor issues fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.3'
 services:
   web:
+    container_name: save-before-expiry-web
     build:
       context: ./
     volumes:
@@ -8,9 +9,15 @@ services:
     command: supervisor -e '.' index.js
     ports:
       - "3000:3000"
+    restart: unless-stopped
+    environment:
+      DB_CONTAINER: db
+      DB_PORT: 3306
     depends_on:
-      - db
+      db:
+        condition: service_healthy
   db:
+    container_name: save-before-expiry-db
     image: mysql
     restart: always
     env_file:
@@ -19,10 +26,18 @@ services:
       - "3308:3306"
     volumes:
       - ./db:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-p${MYSQL_ROOT_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 6
   phpmyadmin:
+    container_name: save-before-expiry-phpmyadmin
     image: phpmyadmin/phpmyadmin:latest
     restart: always
     env_file:
       - ./.env
     ports:
       - "8081:80"
+    depends_on:
+      - db
